--- a/01_materials/labs/lab_2.ipynb
+++ b/01_materials/labs/lab_2.ipynb
@@ -1258,36 +1258,116 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fBPu-dfyzgQR",
-        "outputId": "9535ec07-b263-4672-8c30-f15b8abb1095"
+        "outputId": "cc2ec9cb-b92c-44ba-8571-47a7499252c4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Random init: train loss: 153.04362, train acc: 0.987, test acc: 0.974\n",
-            "200 0.001\n",
-            "Epoch #1, train loss: 871.48143, train acc: 0.906, test acc: 0.907\n",
-            "Epoch #2, train loss: 570.32886, train acc: 0.938, test acc: 0.926\n",
-            "Epoch #3, train loss: 444.09078, train acc: 0.954, test acc: 0.937\n",
-            "Epoch #4, train loss: 371.57775, train acc: 0.965, test acc: 0.944\n",
-            "Epoch #5, train loss: 323.27152, train acc: 0.969, test acc: 0.956\n",
-            "Epoch #6, train loss: 287.68241, train acc: 0.973, test acc: 0.967\n",
-            "Epoch #7, train loss: 259.71077, train acc: 0.976, test acc: 0.970\n",
-            "Epoch #8, train loss: 236.76796, train acc: 0.978, test acc: 0.967\n",
-            "Epoch #9, train loss: 217.40511, train acc: 0.982, test acc: 0.970\n",
-            "Epoch #10, train loss: 200.76208, train acc: 0.984, test acc: 0.970\n",
-            "Epoch #11, train loss: 186.29607, train acc: 0.988, test acc: 0.970\n",
-            "Epoch #12, train loss: 173.60856, train acc: 0.989, test acc: 0.970\n",
-            "Epoch #13, train loss: 162.38080, train acc: 0.991, test acc: 0.970\n",
-            "Epoch #14, train loss: 152.36751, train acc: 0.991, test acc: 0.974\n",
-            "Epoch #15, train loss: 143.38470, train acc: 0.991, test acc: 0.974\n"
+            "Random init: train loss: 155.98797, train acc: 0.988, test acc: 0.978\n",
+            "50 0.1\n",
+            "Epoch #1, train loss: 47132.86451, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #2, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #3, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #4, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #5, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #6, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #7, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #8, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #9, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #10, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #11, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #12, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #13, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #14, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #15, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "50 0.01\n",
+            "Epoch #1, train loss: 887.72034, train acc: 0.823, test acc: 0.807\n",
+            "Epoch #2, train loss: 677.09251, train acc: 0.853, test acc: 0.841\n",
+            "Epoch #3, train loss: 830.33982, train acc: 0.724, test acc: 0.737\n",
+            "Epoch #4, train loss: 4826.39353, train acc: 0.170, test acc: 0.185\n",
+            "Epoch #5, train loss: 11931.32307, train acc: 0.102, test acc: 0.119\n",
+            "Epoch #6, train loss: 14265.03099, train acc: 0.101, test acc: 0.107\n",
+            "Epoch #7, train loss: 17301.95490, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #8, train loss: 17354.87077, train acc: 0.100, test acc: 0.111\n",
+            "Epoch #9, train loss: 21144.08910, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #10, train loss: 19622.08815, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #11, train loss: 24082.43720, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #12, train loss: 25796.81763, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #13, train loss: 28532.34313, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #14, train loss: 25816.51586, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #15, train loss: 26073.23212, train acc: 0.100, test acc: 0.107\n",
+            "50 0.001\n",
+            "Epoch #1, train loss: 1661.02437, train acc: 0.823, test acc: 0.793\n",
+            "Epoch #2, train loss: 993.56990, train acc: 0.898, test acc: 0.881\n",
+            "Epoch #3, train loss: 691.57365, train acc: 0.936, test acc: 0.911\n",
+            "Epoch #4, train loss: 534.46449, train acc: 0.950, test acc: 0.941\n",
+            "Epoch #5, train loss: 446.55523, train acc: 0.959, test acc: 0.952\n",
+            "Epoch #6, train loss: 391.00198, train acc: 0.965, test acc: 0.952\n",
+            "Epoch #7, train loss: 351.67706, train acc: 0.967, test acc: 0.956\n",
+            "Epoch #8, train loss: 321.87183, train acc: 0.970, test acc: 0.959\n",
+            "Epoch #9, train loss: 297.94923, train acc: 0.972, test acc: 0.959\n",
+            "Epoch #10, train loss: 277.56225, train acc: 0.975, test acc: 0.959\n",
+            "Epoch #11, train loss: 259.64783, train acc: 0.978, test acc: 0.956\n",
+            "Epoch #12, train loss: 243.76748, train acc: 0.979, test acc: 0.956\n",
+            "Epoch #13, train loss: 229.61875, train acc: 0.980, test acc: 0.956\n",
+            "Epoch #14, train loss: 216.87329, train acc: 0.984, test acc: 0.959\n",
+            "Epoch #15, train loss: 205.31451, train acc: 0.985, test acc: 0.963\n",
+            "100 0.1\n",
+            "Epoch #1, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #2, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #3, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #4, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #5, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #6, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #7, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #8, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #9, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #10, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #11, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #12, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #13, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #14, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "Epoch #15, train loss: 47456.27877, train acc: 0.100, test acc: 0.107\n",
+            "100 0.01\n",
+            "Epoch #1, train loss: 526.24247, train acc: 0.881, test acc: 0.870\n",
+            "Epoch #2, train loss: 404.12379, train acc: 0.883, test acc: 0.885\n",
+            "Epoch #3, train loss: 415.91138, train acc: 0.892, test acc: 0.911\n",
+            "Epoch #4, train loss: 302.63755, train acc: 0.933, test acc: 0.911\n",
+            "Epoch #5, train loss: 327.92188, train acc: 0.923, test acc: 0.900\n",
+            "Epoch #6, train loss: 202.38804, train acc: 0.932, test acc: 0.911\n",
+            "Epoch #7, train loss: 221.14038, train acc: 0.946, test acc: 0.933\n",
+            "Epoch #8, train loss: 120.67274, train acc: 0.948, test acc: 0.930\n",
+            "Epoch #9, train loss: 146.40064, train acc: 0.969, test acc: 0.933\n",
+            "Epoch #10, train loss: 62.71193, train acc: 0.971, test acc: 0.944\n",
+            "Epoch #11, train loss: 67.62429, train acc: 0.977, test acc: 0.959\n",
+            "Epoch #12, train loss: 32.01392, train acc: 0.988, test acc: 0.959\n",
+            "Epoch #13, train loss: 24.55022, train acc: 0.992, test acc: 0.963\n",
+            "Epoch #14, train loss: 22.37114, train acc: 0.994, test acc: 0.974\n",
+            "Epoch #15, train loss: 19.51840, train acc: 0.995, test acc: 0.978\n",
+            "100 0.001\n",
+            "Epoch #1, train loss: 1311.14164, train acc: 0.864, test acc: 0.852\n",
+            "Epoch #2, train loss: 805.81214, train acc: 0.924, test acc: 0.904\n",
+            "Epoch #3, train loss: 576.02372, train acc: 0.948, test acc: 0.919\n",
+            "Epoch #4, train loss: 453.24800, train acc: 0.958, test acc: 0.937\n",
+            "Epoch #5, train loss: 378.08888, train acc: 0.967, test acc: 0.944\n",
+            "Epoch #6, train loss: 326.45445, train acc: 0.976, test acc: 0.952\n",
+            "Epoch #7, train loss: 288.06659, train acc: 0.979, test acc: 0.956\n",
+            "Epoch #8, train loss: 257.87458, train acc: 0.981, test acc: 0.963\n",
+            "Epoch #9, train loss: 233.54494, train acc: 0.983, test acc: 0.967\n",
+            "Epoch #10, train loss: 214.01890, train acc: 0.983, test acc: 0.967\n",
+            "Epoch #11, train loss: 197.96190, train acc: 0.984, test acc: 0.963\n",
+            "Epoch #12, train loss: 184.22615, train acc: 0.984, test acc: 0.963\n",
+            "Epoch #13, train loss: 172.19994, train acc: 0.988, test acc: 0.963\n",
+            "Epoch #14, train loss: 161.53345, train acc: 0.989, test acc: 0.963\n",
+            "Epoch #15, train loss: 151.98867, train acc: 0.989, test acc: 0.967\n"
           ]
         }
       ],
@@ -1301,7 +1381,7 @@
         "      % (losses[-1], accuracies[-1], accuracies_test[-1]))\n",
         "\n",
         "for hidden_size in [50, 100]:\n",
-        "  for learning_rate in [0.001]:\n",
+        "  for learning_rate in [0.1, 0.01, 0.001]:\n",
         "    model=NeuralNet(n_features,hidden_size, n_classes)\n",
         "    print(hidden_size, learning_rate)\n",
         "    for epoch in range(15):\n",
